--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.scanbarcodeservice">
+    package="com.scanbarcodeservicetest">
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.DEVICE_POWER"
@@ -17,7 +17,7 @@
         android:icon="@drawable/scan"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-        <activity android:name="com.scanbarcodeservice.MainActivity">
+        <activity android:name="com.scanbarcodeservicetest.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,14 +26,14 @@
         </activity>
 
         <service
-            android:name="com.scanbarcodeservice.ScanServices"
+            android:name="com.scanbarcodeservicetest.ScanServices"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.scanservice"></action>
             </intent-filter>
         </service>
-        <service android:name="com.scanbarcodeservice.FxService">
+        <service android:name="com.scanbarcodeservicetest.FxService">
             <intent-filter>
                 <action android:name="com.Fxservice"></action>
             </intent-filter>
